Added landing page but no responsivenss yet

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,4 @@ $tertiaryColor : #c5c6c7;
 $quaternaryColor: #0B1715;
 
 //FONTS
-$primaryFont : 'Roboto';
-$secondaryFont : 'Roboto Condensed';
-$tertiaryFont : 'Roboto Mono';
+$primaryFont : 'Poppins';
