--- a/styles/_fontSheet.scss
+++ b/styles/_fontSheet.scss
@@ -1,5 +1,3 @@
 /* IMPORTED FONTS */ 
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
