Added Divs container and a footer

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,6 +12,12 @@
 
 // MAIN
 @import "./mainPrimary";
+@import "./mainSecondary";
+@import "./mainTertiary";
+@import "./mainQuaternary";
+
+// FOOTER
+@import "./footer";
 
 
 body{
