--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,7 +105,7 @@ header {
   top: 0;
   z-index: 100;
   background-color: #0B1715;
-  height: 100px;
+  height: 60px;
   width: 100%;
   font-family: "Poppins";
   /*background: rgba( 11, 11, 11, 0.7 );
@@ -173,7 +173,7 @@ header .header_icons {
 @media only screen and (min-width: 1000px) { /* DESKTOP */
   /*HEADER*/
   header {
-    height: 60px;
+    height: 70px;
     width: inherit;
     display: flex;
     justify-content: space-between;
@@ -198,7 +198,7 @@ header .header_icons {
 /* MAIN */
 .primary_content {
   width: 100%;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 70px);
 }
 
 #about {
@@ -268,6 +268,83 @@ header .header_icons {
     display: flex;
   }
 }
+/* MAIN */
+.secondary_content {
+  width: 100%;
+  height: 100vh;
+  background-color: #66FCF1;
+  margin-top: 70px;
+  padding-top: 70px;
+}
+
+/* MAIN */ /* MAIN */ /* FOOTER */
+footer {
+  background-color: #0b0c10;
+  width: 100%;
+  height: 400px;
+  border-top: 1px solid #66FCF1;
+  font-family: "Poppins";
+}
+footer .footer_firstdiv .footer_brand {
+  display: flex;
+  text-transform: uppercase;
+  justify-content: center;
+  padding-top: 50px;
+  border-bottom: 1px solid #66FCF1;
+  padding: 50px 0px 50px;
+  margin: 0px 35px 0px;
+}
+footer .footer_firstdiv .footer_brand h2 {
+  color: #c5c6c7;
+  font-size: 15px;
+  letter-spacing: 2px;
+  padding-right: 7px;
+}
+footer .footer_firstdiv .footer_brand h3 {
+  letter-spacing: 2px;
+  font-size: 15px;
+  color: #66FCF1;
+}
+footer .footer_seconddiv {
+  border-bottom: 1px solid #66FCF1;
+  margin: 0px 35px 0px;
+}
+footer .footer_seconddiv ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  font-size: 12px;
+  padding: 50px 0px 50px;
+}
+footer .footer_seconddiv ul li {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+footer .footer_seconddiv ul li a {
+  color: #c5c6c7;
+  text-transform: uppercase;
+}
+footer .footer_thirddiv {
+  color: #c5c6c7;
+  text-align: center;
+}
+footer .footer_thirddiv .social {
+  padding: 30px 0px 30px;
+}
+footer .footer_thirddiv .social h5 {
+  padding-bottom: 15px;
+  text-transform: uppercase;
+}
+footer .footer_thirddiv .social a {
+  color: #66FCF1;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 20px;
+}
+footer .footer_thirddiv p {
+  font-size: 12px;
+}
+
 body {
   background-color: #0B1715;
 }
