--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -8,43 +8,56 @@ footer{
     height: 400px;
     border-top: 1px solid $secondaryColor;
     font-family: $primaryFont;
+    text-transform: uppercase;
     .footer_firstdiv{
         .footer_brand{
             display: flex;
-            text-transform: uppercase;
             justify-content: center;
             padding-top: 50px;
             border-bottom: 1px solid $secondaryColor;
-            padding: 50px 0px 50px;
-            margin: 0px 35px 0px;
-            h2{
-                color: $tertiaryColor;
+            padding: 50px 0px;
+            margin: 0px 35px;
+            h2, h3{
                 font-size: 15px;
                 letter-spacing: 2px;
+            }
+            h2{
+                color: $tertiaryColor;
                 padding-right: 7px;
             }
             h3{
-                letter-spacing: 2px;
-                font-size: 15px;
                 color: $secondaryColor;
             }
         }
     }
     .footer_seconddiv{
         border-bottom: 1px solid $secondaryColor;
-        margin: 0px 35px 0px;
+        margin: 0px 35px;
         ul{
             display: flex;
             list-style: none;
             justify-content: center;
             font-size: 12px;
-            padding: 50px 0px 50px;
+            padding: 50px 0px;
             li{
-                padding-left: 15px;
-                padding-right: 15px;
+                padding: 0px 15px;
                 a{
                     color: $tertiaryColor;
-                    text-transform: uppercase;
+                    &:hover{
+                        text-decoration: none;
+                    }
+                    &::after{
+                        content: '';
+                        display: block;
+                        width: 0;
+                        height: 1px;
+                        background: $secondaryColor;
+                        transition: width .3s;
+                        margin-top: 3px;
+                    }
+                    &:hover::after{
+                        width: 100%;
+                    } 
                 }
             }
         }
@@ -53,20 +66,22 @@ footer{
         color: $tertiaryColor;
         text-align: center;
         .social{
-            padding: 30px 0px 30px;
+            padding: 30px 0px;
             h5{
                 padding-bottom: 15px;
-                text-transform: uppercase;
             }
             a{
                 color: $secondaryColor;
-                padding-left: 5px;
-                padding-right: 5px;
+                padding: 0px 5px;
                 font-size: 20px;
             }
         }
         p{
             font-size: 12px;
+            text-transform: capitalize;
         }
     }
+}
+
+@media only screen and (min-width: 1000px){ /* DESKTOP */
 }
