--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,67 +284,80 @@ footer {
   height: 400px;
   border-top: 1px solid #66FCF1;
   font-family: "Poppins";
+  text-transform: uppercase;
 }
 footer .footer_firstdiv .footer_brand {
   display: flex;
-  text-transform: uppercase;
   justify-content: center;
   padding-top: 50px;
   border-bottom: 1px solid #66FCF1;
-  padding: 50px 0px 50px;
-  margin: 0px 35px 0px;
+  padding: 50px 0px;
+  margin: 0px 35px;
+}
+footer .footer_firstdiv .footer_brand h2, footer .footer_firstdiv .footer_brand h3 {
+  font-size: 15px;
+  letter-spacing: 2px;
 }
 footer .footer_firstdiv .footer_brand h2 {
   color: #c5c6c7;
-  font-size: 15px;
-  letter-spacing: 2px;
   padding-right: 7px;
 }
 footer .footer_firstdiv .footer_brand h3 {
-  letter-spacing: 2px;
-  font-size: 15px;
   color: #66FCF1;
 }
 footer .footer_seconddiv {
   border-bottom: 1px solid #66FCF1;
-  margin: 0px 35px 0px;
+  margin: 0px 35px;
 }
 footer .footer_seconddiv ul {
   display: flex;
   list-style: none;
   justify-content: center;
   font-size: 12px;
-  padding: 50px 0px 50px;
+  padding: 50px 0px;
 }
 footer .footer_seconddiv ul li {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0px 15px;
 }
 footer .footer_seconddiv ul li a {
   color: #c5c6c7;
-  text-transform: uppercase;
+}
+footer .footer_seconddiv ul li a:hover {
+  text-decoration: none;
+}
+footer .footer_seconddiv ul li a::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 1px;
+  background: #66FCF1;
+  transition: width 0.3s;
+  margin-top: 3px;
+}
+footer .footer_seconddiv ul li a:hover::after {
+  width: 100%;
 }
 footer .footer_thirddiv {
   color: #c5c6c7;
   text-align: center;
 }
 footer .footer_thirddiv .social {
-  padding: 30px 0px 30px;
+  padding: 30px 0px;
 }
 footer .footer_thirddiv .social h5 {
   padding-bottom: 15px;
-  text-transform: uppercase;
 }
 footer .footer_thirddiv .social a {
   color: #66FCF1;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 0px 5px;
   font-size: 20px;
 }
 footer .footer_thirddiv p {
   font-size: 12px;
+  text-transform: capitalize;
 }
 
+@media only screen and (min-width: 1000px) { /* DESKTOP */ }
 body {
   background-color: #0B1715;
 }
