--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,7 +198,7 @@ header .header_icons {
 /* MAIN */
 .primary_content {
   width: 100%;
-  height: calc(100vh - 70px);
+  height: auto;
 }
 
 #about {
@@ -207,12 +207,26 @@ header .header_icons {
   margin: auto;
   display: block;
 }
+#about .about_description2 {
+  flex: 1;
+  height: auto;
+}
+#about .about_description2 .about_picture {
+  background-image: url(./images/PersonalIcon.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  margin-top: 80px;
+  border-radius: 50%;
+}
 #about .about_description {
   flex: 1;
   display: flex;
   flex-direction: column;
   font-family: "Poppins";
-  padding: 150px 70px 0px 30px;
+  padding: 50px 0px 0px;
 }
 #about .about_description h1 {
   color: #66FCF1;
@@ -248,24 +262,23 @@ header .header_icons {
   background-color: #66FCF1;
   transition: ease-in 0.2s;
 }
-#about .about_description2 {
-  flex: 1;
-  height: auto;
-}
-#about .about_description2 .about_picture {
-  background-image: url(./images/PersonalIcon.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 300px;
-  height: 300px;
-  margin: auto;
-  margin-top: 100px;
-  border-radius: 50%;
-}
 
 @media only screen and (min-width: 1000px) { /* DESKTOP */
+  .primary_content {
+    height: calc(100vh - 70px);
+  }
   #about {
     display: flex;
+    flex-direction: row-reverse;
+  }
+  #about .about_description2 {
+    padding-top: 10px;
+  }
+  #about .about_description2 .about_picture {
+    margin-top: 100px;
+  }
+  #about .about_description {
+    padding: 150px 70px 0px 30px;
   }
 }
 /* MAIN */
