--- a/styles/styles.css
+++ b/styles/styles.css
@@ -370,7 +370,17 @@ footer .footer_thirddiv p {
   text-transform: capitalize;
 }
 
-@media only screen and (min-width: 1000px) { /* DESKTOP */ }
+@media only screen and (min-width: 1000px) { /* DESKTOP */
+  .footer_thirddiv .social {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 50px;
+  }
+  .footer_thirddiv .copyright {
+    text-align: left;
+    margin: 0px 50px;
+  }
+}
 body {
   background-color: #0B1715;
 }
