--- a/styles/_mainQuaternary.scss
+++ b/styles/_mainQuaternary.scss
@@ -3,3 +3,161 @@
 /* MAIN */
 
 // QUATERNARY
+
+.quaternary_content{
+    padding: 100px 0px;
+    #contact{
+        width: 100%;
+        height: auto;
+        font-family: $primaryFont;
+        .contact_description{
+            padding: 0px 50px 30px;
+            h2{
+                text-transform: uppercase;
+                color: $secondaryColor;
+                letter-spacing: 3px;
+                font-size: 25px;
+                margin-bottom: 20px;
+            }
+            p{
+                color: $tertiaryColor;
+                font-size: 16px;
+                line-height: 20px;
+                margin-bottom: 10px;
+            }
+            .contact_email{
+                display: flex;
+                min-width: 350px;
+                .mail_icon{
+                    align-self: center;
+                    background-image: url(./images/Mail_icon.png);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 10px;
+                }
+                .email{
+                    flex-grow: 1;
+                    display: flex;
+                    align-items: center;
+                    p{
+                        padding-top: 10px;
+                        font-size: 14px;
+                        letter-spacing: 1px;
+                    }
+                }
+            }
+        }
+        .contact_form{
+            padding-top: 20px;
+            form{
+                background-color: $secondaryColor;
+                width: 300px;
+                height: 500px;
+                margin: auto;
+                padding: 20px;
+                padding-top: 30px;
+                border-radius: 3px;
+                .contact_form_text{
+                    h2{
+                        text-transform: uppercase;
+                        color: #111;
+                        letter-spacing: 3px;
+                        font-size: 25px;
+                        text-align: center;
+                    }
+                    label {
+                        display: block;
+                        padding-top: 25px;
+                        padding-bottom: 15px;
+                    }
+                    input::placeholder{
+                        color: $primaryColor;
+                    }
+                    textarea::placeholder{
+                        color: $primaryColor;
+                    }
+                    input, textarea{
+                        background-color: $secondaryColor;
+                        color: $primaryColor;
+                        width: 100%;
+                        padding: 10px;
+                        box-sizing: border-box;
+                        outline: none;
+                        resize: none;
+                        border: none;
+                        border-bottom: 1px solid $primaryColor;
+                    }
+                    
+                    input[type="text"]:focus, textarea:focus{
+                        border-bottom: 1px solid #411530;
+                    }
+                    
+                    textarea::-webkit-scrollbar{
+                        width: 4px;
+                    }
+                    
+                    textarea::-webkit-scrollbar-thumb{
+                        background-color: $primaryColor;
+                    }
+                    
+                    .success{
+                        text-align: center;
+                    }
+                    
+                    input[type="submit"]{
+                        margin-top: 30px;
+                        width: 90%;
+                        max-width: 200px;
+                        background: $primaryColor;
+                        color: $tertiaryColor;
+                        font-size: 17px;
+                        cursor: pointer;
+                        border-radius: 3px;
+                        transition: ease-out 0.2s;
+                    }
+                    
+                    input[type="submit"]:hover{
+                        box-shadow: inset 200px 0 0 0 $tertiaryColor;
+                        cursor: pointer;
+                        color: #411530;
+                    }
+                    
+                    .error{
+                        color: $tertiaryColor;
+                        font-size: 11px;
+                    }
+                    
+                    .error-border{
+                        border-bottom: 1px solid $tertiaryColor;
+                    }
+                    
+                    #success{
+                        color: #28A745;
+                        margin: 5px;
+                    }
+                }
+            }
+        }
+    }
+    
+}
+
+@media only screen and (min-width: 1000px){ /* DESKTOP */
+    #contact{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        .contact_description{
+            margin-right: 120px;
+            border-right: 1px solid $secondaryColor;
+            h2{
+                padding: 150px 0px 0px;
+            }
+        }
+        .contact_form{
+            padding: 78px 200px 0px 0px;
+        }
+    }
+}
