--- a/styles/styles.css
+++ b/styles/styles.css
@@ -206,6 +206,7 @@ header .header_icons {
   height: 100%;
   margin: auto;
   display: block;
+  font-family: "Poppins";
 }
 #about .about_icon {
   flex: 1;
@@ -225,7 +226,6 @@ header .header_icons {
   flex: 1;
   display: flex;
   flex-direction: column;
-  font-family: "Poppins";
   padding: 50px 0px 0px;
 }
 #about .about_description h1 {
@@ -284,10 +284,81 @@ header .header_icons {
 /* MAIN */
 .secondary_content {
   width: 100%;
-  height: 100vh;
-  background-color: #66FCF1;
-  margin-top: 70px;
-  padding-top: 70px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  background-color: #0b0c10;
+  font-family: "Poppins";
+  margin-top: 30px;
+  padding-bottom: 100px;
+}
+.secondary_content .skills_container {
+  background-color: #0b0c10;
+  width: 65%;
+  margin: 70px 0px 0px;
+}
+.secondary_content .skills_container .skills_text {
+  color: #66FCF1;
+  margin: 20px 0px 0px;
+  text-align: center;
+}
+.secondary_content .skills_container .skills_text h1 {
+  font-weight: 700;
+  font-size: 30px;
+  letter-spacing: 2px;
+  padding: 30px 0px;
+}
+.secondary_content .skills_container #skills {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 25px;
+  padding: 20px;
+}
+.secondary_content .skills_container #skills .skill_box {
+  height: 180px;
+  width: 180px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin: auto;
+  padding: 30px 0px;
+}
+.secondary_content .skills_container #skills .skill_box .skill1, .secondary_content .skills_container #skills .skill_box .skill2, .secondary_content .skills_container #skills .skill_box .skill3, .secondary_content .skills_container #skills .skill_box .skill4, .secondary_content .skills_container #skills .skill_box .skill5, .secondary_content .skills_container #skills .skill_box .skill6, .secondary_content .skills_container #skills .skill_box .skill7, .secondary_content .skills_container #skills .skill_box .skill8 {
+  width: 80px;
+  height: 80px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.secondary_content .skills_container #skills .skill_box p {
+  color: #c5c6c7;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+}
+.secondary_content .skills_container #skills .skill_box .skill1 {
+  background-image: url(./images/skills_icon/htmlicon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill2 {
+  background-image: url(./images/skills_icon/cssicon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill3 {
+  background-image: url(./images/skills_icon/jsicon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill4 {
+  background-image: url(./images/skills_icon/giticon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill5 {
+  background-image: url(./images/skills_icon/scssicon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill6 {
+  background-image: url(./images/skills_icon/reacticon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill7 {
+  background-image: url(./images/skills_icon/firebaseicon.png);
+}
+.secondary_content .skills_container #skills .skill_box .skill8 {
+  background-image: url(./images/skills_icon/figmaicon.png);
 }
 
 /* MAIN */ /* MAIN */
@@ -553,6 +624,10 @@ footer .footer_thirddiv p {
   color: #66FCF1;
   border: 1px solid #66FCF1;
   transition: background-color 0.5s ease-out;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
