--- a/styles/_mainQuaternary.scss
+++ b/styles/_mainQuaternary.scss
@@ -11,7 +11,7 @@
         height: auto;
         font-family: $primaryFont;
         .contact_description{
-            padding: 0px 50px 30px;
+            padding: 0px 50px 30px 100px;
             h2{
                 text-transform: uppercase;
                 color: $secondaryColor;
