Added Carousel on projects

--- a/styles/_mainQuaternary.scss
+++ b/styles/_mainQuaternary.scss
@@ -6,6 +6,8 @@
 
 .quaternary_content{
     padding: 100px 0px;
+    margin-top: 30px;
+    background-color: $primaryColor;
     #contact{
         width: 100%;
         height: auto;
