--- a/styles/_mainPrimary.scss
+++ b/styles/_mainPrimary.scss
@@ -74,6 +74,7 @@
 @media only screen and (min-width: 1000px){ /* DESKTOP */
     .primary_content{
         height: calc(100vh - 70px);
+        margin-top: 30px;
     }
     #about{
         display: flex;
