--- a/styles/_mainTertiary.scss
+++ b/styles/_mainTertiary.scss
@@ -9,6 +9,7 @@
         width: 100%;
         height: auto;
         font-family: $primaryFont;
+        cursor: pointer;
         .projects_text{
             color: $secondaryColor;
             margin: 20px 0px 0px;
@@ -24,23 +25,52 @@
             margin: auto;
             width: 80%;
             min-height: 400px;
-            padding: 150px 20px 0px;
-            background-size: cover;
+            padding: 150px 70px 0px;
+            &:hover{
+                h2, p {
+                    opacity: 1;
+                }
+            }
             h2, p{
                 text-align: center;
                 font-family: $primaryFont;
                 font-size: 30px;
                 font-weight: 600;
+                opacity: 0;
+                transition: opacity 0.3s ease-in-out;
+                color: $tertiaryColor;
             }
             p{
                 margin-top: 20px;
-                font-size: 15px;
+                font-size: 18px;
                 line-height: 20px;
             }
         }
     }
 }
 
-#magus{
-    background-image: url(./images/projects_wallpaper/quiz_magus.png);
+//PROJECTS 
+//QUIZ MAGUS
+#magus {
+    position: relative;
+    overflow: hidden;
 }
+#magus::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(./images/projects_wallpaper/quiz_magus.png);
+    background-size: cover;
+    transition: filter 0.3s ease-in-out;
+    filter: none;
+    z-index: -1;
+}
+#magus:hover::before {
+    filter: blur(5px);
+    opacity: 0.3;
+}
+
+//Add a new project
