--- a/styles/_mainTertiary.scss
+++ b/styles/_mainTertiary.scss
@@ -21,6 +21,9 @@
                 padding: 30px 0px;
             }
         }
+        a{
+            text-decoration: none;
+        }
         .project{
             margin: auto;
             width: 80%;
