--- a/styles/styles.css
+++ b/styles/styles.css
@@ -389,6 +389,9 @@ header .header_icons {
   letter-spacing: 2px;
   padding: 30px 0px;
 }
+#tertiary_content #projects a {
+  text-decoration: none;
+}
 #tertiary_content #projects .project {
   margin: auto;
   width: 80%;
