--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,6 +99,56 @@ input, select {
 }
 
 /* IMPORTED FONTS */
+@keyframes slideTop {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideBottom {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideRight {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 /* HEADER */
 header {
   position: sticky;
@@ -108,10 +158,6 @@ header {
   height: 60px;
   width: 100%;
   font-family: "Poppins";
-  /*background: rgba( 11, 11, 11, 0.7 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 9.5px );
-  -webkit-backdrop-filter: blur( 9.5px );*/
 }
 header .header_brand {
   display: flex;
@@ -145,6 +191,7 @@ header .header_buttons ul {
 header .header_buttons ul li {
   list-style: none;
   padding: 0px 10px 0px;
+  animation: slideTop 1s ease forwards;
 }
 header .header_buttons ul li a {
   color: #c5c6c7;
@@ -195,6 +242,56 @@ header .header_icons {
     padding-top: 4px;
   }
 }
+@keyframes slideTop {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideBottom {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideRight {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 /* MAIN */
 .primary_content {
   width: 100%;
@@ -221,6 +318,9 @@ header .header_icons {
   margin: auto;
   margin-top: 80px;
   border-radius: 50%;
+  animation: slideLeft 1s ease forwards;
+  opacity: 0;
+  animation-delay: 1.7s;
 }
 #about .about_description {
   flex: 1;
@@ -234,6 +334,9 @@ header .header_icons {
   font-weight: 700;
   letter-spacing: 2px;
   padding: 5px;
+  animation: slideRight 1s ease forwards;
+  opacity: 0;
+  animation-delay: 0.4s;
 }
 #about .about_description h2, #about .about_description p {
   color: #c5c6c7;
@@ -243,22 +346,34 @@ header .header_icons {
   font-weight: 600;
   font-size: 17px;
   letter-spacing: 2px;
+  opacity: 0;
+  animation: slideTop 1s ease forwards;
+  animation-delay: 0.7s;
+}
+#about .about_description h2 span {
+  color: #66FCF1;
 }
 #about .about_description p {
   font-size: 15px;
   line-height: 18px;
+  opacity: 0;
+  animation: slideLeft 1s ease forwards;
+  animation-delay: 1.1s;
 }
-#about .about_description #contact_btn {
+#about .about_description #resume_btn {
   margin-top: 20px;
-  width: 130px;
+  width: 150px;
   padding: 10px;
   background-color: transparent;
   color: #c5c6c7;
   border: 1px solid #66FCF1;
   border-radius: 10px;
   cursor: pointer;
+  opacity: 0;
+  animation: slideTop 1s ease forwards;
+  animation-delay: 1.3s;
 }
-#about .about_description #contact_btn:hover {
+#about .about_description #resume_btn:hover {
   color: #0B1715;
   background-color: #66FCF1;
   transition: ease-in 0.2s;
@@ -707,6 +822,56 @@ footer .footer_thirddiv p {
   transition: background-color 0.5s ease-out;
 }
 
+@keyframes slideTop {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideBottom {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideRight {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 html {
   scroll-behavior: smooth;
 }
