--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -22,6 +22,9 @@
 // SCROLL EFFECT
 @import "./scrollButton";
 
+// ANIMATION EFFECT
+@import "./animation";
+
 html{
     scroll-behavior: smooth;
 }
