--- a/styles/_mainPrimary.scss
+++ b/styles/_mainPrimary.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./animation";
 
 /* MAIN */
 
@@ -26,6 +27,9 @@
             margin: auto;
             margin-top: 80px;
             border-radius: 50%;
+            animation: slideLeft 1s ease forwards;
+            opacity: 0;
+            animation-delay: 1.7s;
         }
     }
     .about_description{
@@ -39,6 +43,9 @@
             font-weight: 700;
             letter-spacing: 2px;
             padding: 5px;
+            animation: slideRight 1s ease forwards;
+            opacity: 0;
+            animation-delay: 0.4s;
         }
         h2, p{
             color: $tertiaryColor;
@@ -48,20 +55,32 @@
             font-weight: 600;
             font-size: 17px;
             letter-spacing: 2px;
+            opacity: 0;
+            animation: slideTop 1s ease forwards;
+            animation-delay: .7s;
+            span{
+                color: $secondaryColor;
+            }
         }
         p{
             font-size: 15px;
             line-height: 18px;
+            opacity: 0;
+            animation: slideLeft 1s ease forwards;
+            animation-delay: 1.1s;
         }
-        #contact_btn{
+        #resume_btn{ // Make it download CV
             margin-top: 20px;
-            width: 130px;
+            width: 150px;
             padding: 10px;
             background-color: transparent;
             color: $tertiaryColor;
             border: 1px solid $secondaryColor;
             border-radius: 10px;
             cursor: pointer;
+            opacity: 0;
+            animation: slideTop 1s ease forwards;
+            animation-delay: 1.3s;
             &:hover{
                 color: $quaternaryColor;
                 background-color: $secondaryColor;
