--- a/styles/styles.css
+++ b/styles/styles.css
@@ -531,7 +531,7 @@ header .header_icons {
   line-height: 20px;
 }
 
-#magus {
+#magus, #covid_tracker {
   position: relative;
   overflow: hidden;
 }
@@ -551,6 +551,25 @@ header .header_icons {
 }
 
 #magus:hover::before {
+  filter: blur(5px);
+  opacity: 0.3;
+}
+
+#covid_tracker::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(./images/projects_wallpaper/covidtracker.gif);
+  background-size: cover;
+  transition: filter 0.3s ease-in-out;
+  filter: none;
+  z-index: -1;
+}
+
+#covid_tracker:hover::before {
   filter: blur(5px);
   opacity: 0.3;
 }
@@ -882,6 +901,15 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: top left;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #66FCF1;
 }
 
 @media only screen and (min-width: 1000px) { /* DESKTOP */ }/*# sourceMappingURL=styles.css.map */
